--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,5 +1,5 @@
 .bg-picture{
-    background-image: url('/bg.jpg');
+    background-image: url('/background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
